<resources>
    <string name="app_name">Pharmacy</string>
    <string name="tvMain_title">Point Of Sale System</string>
    <string name="user_name">User Name</string>
    <string name="til_user_name">User Name</string>
    <string name="til_password">Password</string>
    <string name="tilFistName">First Name</string>
    <string name="til_last_name">Last Name</string>
    <string name="app_title">Welcome To POS System</string>
    <string name="til_retype_emailAddress_forgotPwd">Enter Your E-mail Address</string>
    <string name="singin"><a href="https://www.google.com/">SingIn</a></string>
    <string name="singup"><a href="https://www.google.com/">SingUp</a></string>
    <string name="forgot_password"><a href="https://www.google.com/">Forgot Password?</a></string>
</resources>
