<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context="com.whiteElephant.pharmacypos.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerInParent="true">

        <LinearLayout
            android:id="@+id/ll_title_main"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="2dp">

            <androidx.cardview.widget.CardView
                android:id="@+id/cv_title_main"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/color_baby_blue"
                android:elevation="4dp"
                app:cardCornerRadius="6dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="20dp"
                    android:text="@string/app_title"
                    android:textAlignment="center"
                    android:textSize="25sp"
                    android:textStyle="bold" />

            </androidx.cardview.widget.CardView>

        </LinearLayout>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ll_title_main"
            android:elevation="4dp"
            app:cardCornerRadius="6dp"
            android:layout_margin="2dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dimen_8dp"
                android:layout_marginTop="36dp"
                android:weightSum="2">

                <TextView
                    android:id="@+id/tvSingIn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/dimen_8dp"
                    android:layout_weight="1"
                    android:textAlignment="center"
                    android:text="@string/singin"
                    android:textSize="16sp"
                    android:linksClickable="true"
                    android:background="@color/color_transparent"
                    android:textStyle="bold|italic" />

                <TextView
                    android:id="@+id/tvSingUp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/dimen_8dp"
                    android:layout_weight="1"
                    android:textAlignment="center"
                    android:background="@color/color_transparent"
                    android:text="@string/singup"
                    android:textSize="16sp"
                    android:linksClickable="true"
                    android:textStyle="bold|italic" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </LinearLayout>

</RelativeLayout>