<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context="com.whiteElephant.pharmacypos.activity.RegisterActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_userInfoTitle_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dimen_8dp"
        android:elevation="2dp"
        app:cardCornerRadius="6dp">

        <TextView
            android:id="@+id/tvMain_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="2dp"
            android:padding="@dimen/dimen_8dp"
            android:text="@string/tvMain_title"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textColor="@color/rich_black"
            android:textSize="@dimen/text_size_small" />

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_userInfo_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/cv_userInfoTitle_register"
        android:layout_margin="@dimen/dimen_8dp"
        android:elevation="2dp"
        app:cardCornerRadius="6dp">

        <LinearLayout
            android:id="@+id/ll_userInfo_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dimen_8dp"
            android:background="@color/colorWhite"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_firstName_register"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/tilFistName"
                android:padding="@dimen/dimen_8dp"
                android:textStyle="bold">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:textSize="16sp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_lastName_register"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/til_last_name"
                android:padding="@dimen/dimen_8dp"
                android:textStyle="bold">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:textSize="16sp"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_userName_register"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/til_user_name"
                android:padding="@dimen/dimen_8dp"
                android:textStyle="bold">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:textSize="16sp"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_password_register"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/til_password"
                android:padding="@dimen/dimen_8dp"
                android:textStyle="bold">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:textSize="16sp"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_retypePassword_register"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="Retype Password"
                android:padding="@dimen/dimen_8dp"
                android:textStyle="bold">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:textSize="16sp"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_recoverEmail_register"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="Enter Your E-mail Address"
                android:padding="@dimen/dimen_8dp"
                android:textStyle="bold">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:textSize="16sp"/>

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_btnRegister_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/cv_userInfo_register"
        android:layout_margin="@dimen/dimen_8dp"
        android:background="@color/color_white"
        android:elevation="2dp"
        app:cardCornerRadius="6dp">

        <LinearLayout
            android:id="@+id/ll_btnRegister_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/color_white"
            android:orientation="vertical">

            <Button
                android:id="@+id/btn_register_register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="Register"
                android:textAllCaps="false"
                android:textSize="16sp"
                android:textStyle="bold"
                android:background="@drawable/rounded_shape_btn"/>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</RelativeLayout>